Add GET '/ocurrences/{user_id}' endpoint
